--- a/index.html
+++ b/index.html
@@ -41,14 +41,21 @@
                 </div>
                 <div class="main-d">
                     <h1>Main-d'oeuvre</h1>
-                    <h3>900.000 FCFA</h3>
+                    <h3>800.000 FCFA</h3>
                     <p style="background-color: brown; color: aliceblue; border-radius: 20px;"><strong style="text-decoration: underline;">NB</strong> : Le travail de hauteur est un travail <br>tres delicat, et donc on devra le faire surment a<br>plusieurs. <span style="text-decoration: underline;">Pour l'interieur du batiment c'est une autre histoire</span> <br> <strong>le prix peut etre discutable. <br>Vous faites tellement beaucoup pour moi que <br>ya des prix que je ne peux pas vous faire mais <br>mais pour l'exterieur essayez de comprendre...</strong></p>
                 </div>
             </div>
             <div class="devi2">
                 <div class="enduit">
-                    <h1>Enduit</h1>
-                    <h3>Jai pas encore terminer</h3>
+                    <h1>Enduit + peinture + decor</h1>
+                    <p><strong>peinture enduit = 20 pots</strong></p>
+                    <p><strong>paquets de ciment = 18 paquets</strong></p>
+                    <p><strong>Anti rouile = 35 kilos</strong></p>
+                    <p><strong>peinture interieur = 12 pots pots</strong></p>
+                </div>
+                <div>
+                    <h1>main-d'oeuvre</h1>
+                    <h3>500.000 FCFA</h3>
                 </div>
             </div>
         </div>
